--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=MoneyTransfer
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.Url=jdbc:mysql://localhost:3306/MoneyTransfer
+spring.datasource.Url=jdbc:mysql://localhost:3306/transfersystem
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.username=root
 spring.datasource.password=nadabella22
