--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.show-sql= true
 app.jwt.secret = secret9895789473989869562785693475674689365
 app.jwt.expiration.ms = 1800000
 logging.level.org.springframework.security=DEBUG
+server.servlet.session.timeout=30m
