--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=MoneyTransfer
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.Url=jdbc:mysql://localhost:3306/transfersystem
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.username=root
-spring.datasource.password=nadabella22
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql= true
 app.jwt.secret = secret9895789473989869562785693475674689365
 app.jwt.expiration.ms = 1800000
